--- a/boost/libs/smart_ptr/smart_ptr.htm
+++ b/boost/libs/smart_ptr/smart_ptr.htm
@@ -68,6 +68,8 @@
 			versions of the smart pointer implementation.</p>
 		<p>A page on <a href="smarttests.htm">smart pointer timings</a> will be of interest 
 			to those curious about performance issues.</p>
+		<P>A page on <A href="sp_techniques.html">smart pointer programming techniques</A> lists 
+			some advanced applications of <code>shared_ptr</code> and <code>weak_ptr</code>.</P>
 		<h2><a name="common_requirements">Common Requirements</a></h2>
 		<p>These smart pointer class templates have a template parameter, <b>T</b>, which 
 			specifies the type of the object pointed to by the smart pointer. The behavior 
