Migrated to the Unit Test Framework.
SVN-Revision: 17550

--- a/boost/libs/math/special_functions/index.html
+++ b/boost/libs/math/special_functions/index.html
@@ -38,9 +38,7 @@
 
 
 <h2>Special Functions library</h2>
-		<p>The Special Functions library is a stop-gap collection of numerical functions, some of which are needed for our implementation of
-        <a href="../quaternion/index.html">quaternions</a> and
-        <a href="../octonion/index.html">octonions</a>.	
+		<p>The Special Functions library is a stop-gap collection of numerical functions, some of which are needed for our implementation of <a href="../quaternion/index.htm">quaternions</a> and <a href="../octonion/index.htm">octonions</a>.	
 		<ul>
 			<li><a href="special_functions.html">Documentation</a></li>
 			<li>Header <a href="../../../boost/math/special_functions/acosh.hpp">acosh.hpp</a>
@@ -52,10 +50,11 @@
 			<li>Submitted by Hubert Holin and Eric Ford.</li>
 		</ul>
 		<hr>
-		<p>Revised <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->09 Jan 2003<!--webbot bot="Timestamp" endspan i-checksum="14750" -->
+		<p>Revised <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->03 Feb 2003<!--webbot bot="Timestamp" endspan i-checksum="14992" -->
 
 </p>
 
 </body>
 
 </html>
+
