--- a/boost/libs/math/special_functions/special_functions.html
+++ b/boost/libs/math/special_functions/special_functions.html
@@ -15,43 +15,10 @@
 			<li><a href="#Synopsis">Synopsis</a>
 			<li><a href="#Functions">Functions</a>
 			<li><a href="#History">History</a>
+			<li><a href="#ToDo">To Do</a>
 		</ul>
-		<p>The Special Functions library currently provides five templated special functions, in namespace boost. Two of these (<code>sinc_pi</code> and <code>sinhc_pi</code>) are needed by our implementation of quaternions and octonions.</p>
-		<p>The functions <code>acosh</code>, <code>asinh</code> and <code>atanh</code> are entirely classical, the function <code>sinc_pi</code> sees heavy use in signal processing tasks, and the function <code>sinhc_pi</code> is an <cite>ad'hoc</cite> function whose naming is modelled on <code>sinc_pi</code> and hyperbolic functions.</p>
-		<p>The exponential funtion is defined, for all object for which this makes sense, as the power series <img src="graphics/special_functions_blurb1.jpeg" width="75" height="32" naturalsizeflag="3" align=absmiddle><font color="#000000">, with <img src="graphics/special_functions_blurb2.jpeg" width="83" height="12" naturalsizeflag="3" align=absmiddle></font><font color="#000000"> (and <img src="graphics/special_functions_blurb3.jpeg" width="26" height="12" naturalsizeflag="3" align=absmiddle></font><font color="#000000"> by definition) being the factorial of <img src="graphics/special_functions_blurb4.jpeg" width="9" height="9" naturalsizeflag="3" align=absmiddle></font><font color="#000000">. In particular, the exponential function is well defined for real numbers, complex number, quaternions, octonions, and matrices of complex numbers, among others.</font></p>
-		<div align="center">
-			<p><img src="graphics/exp_on_R.png" width="502" height="330" border="0"></p>
-			<p><samp>Graph of exp on R</samp></p>
-		</div>
-		<p></p>
-		<div align="center">
-			<p><img src="graphics/Re(exp)_on_C.png" width="374" height="249" border="0"><img src="graphics/Im(exp)_on_C.png" width="374" height="249" border="0"></p>
-			<p><samp>Real and Imaginary parts of exp on C</samp></p>
-		</div>
-		<p></p>
-		<p><font color="#000000">The hyperbolic functions are defined as power series which can be computed (for reals, complex, quaternions and octonions) as:</font></p>
-		<p><font color="#000000">&nbsp;</font></p>
-		<p><font color="#000000">Hyperbolic cosine: <img src="graphics/special_functions_blurb5.jpeg" width="144" height="29" naturalsizeflag="3" align=absmiddle></font></p>
-		<p><font color="#000000">Hyperbolic sine: <img src="graphics/special_functions_blurb6.jpeg" width="142" height="29" naturalsizeflag="3" align=absmiddle></font></p>
-		<p><font color="#000000">Hyperbolic tangent: <img src="graphics/special_functions_blurb7.jpeg" width="90" height="32" naturalsizeflag="3" align=absmiddle></font></p>
-		<p></p>
-		<div align="center">
-			<p><font color="#000000">&nbsp;<img src="graphics/trigonometric.png" width="502" height="330" border="0"></font></p>
-			<p><samp>Trigonometric functions on R (cos: purple; sin: red; tan: blue)</samp></p>
-			<p><img src="graphics/hyperbolic.png" width="502" height="330" border="0"></p>
-			<p><samp>Hyperbolic functions on r (cosh: purple; sinh: red; tanh: blue)</samp></p>
-		</div>
-		<p></p>
-		<p><font color="#000000">The hyperbolic sine is one to one on the set of real numbers, with range the full set of reals, while the hyperbolic tangent is also one to one on the set of real numbers but with range <img src="graphics/special_functions_blurb8.jpeg" width="46" height="16" naturalsizeflag="3" align=absmiddle></font><font color="#000000">, and therefore both have inverses. The hyperbolic cosine is one to one from <img src="graphics/special_functions_blurb9.jpeg" width="35" height="15" naturalsizeflag="3" align=absmiddle></font><font color="#000000"> onto <img src="graphics/special_functions_blurb10.jpeg" width="41" height="15" naturalsizeflag="3" align=absmiddle></font><font color="#000000"> (and from <img src="graphics/special_functions_blurb11.jpeg" width="35" height="15" naturalsizeflag="3" align=absmiddle></font><font color="#000000"> onto <img src="graphics/special_functions_blurb12.jpeg" width="41" height="15" naturalsizeflag="3" align=absmiddle></font><font color="#000000">); the inverse function we use here is defined on <img src="graphics/special_functions_blurb13.jpeg" width="41" height="15" naturalsizeflag="3" align=absmiddle></font><font color="#000000"> with range <img src="graphics/special_functions_blurb14.jpeg" width="35" height="15" naturalsizeflag="3" align=absmiddle></font><font color="#000000">.</font></p>
-		<p><font color="#000000">The inverse of the hyperbolic tangent is called the Argument hyperbolic tangent, and can be computed as <img src="graphics/special_functions_blurb15.jpeg" width="109" height="44" naturalsizeflag="3" align=absbottom></font><font color="#000000">.</font></p>
-		<p><font color="#000000">The inverse of the hyperbolic sine is called the Argument hyperbolic sine, and can be computed (for <img src="graphics/special_functions_blurb16.jpeg" width="28" height="12" naturalsizeflag="3" align=absmiddle></font><font color="#000000">) as <img src="graphics/special_functions_blurb17.jpeg" width="133" height="24" naturalsizeflag="3" align=absmiddle></font><font color="#000000">.</font></p>
-		<p><font color="#000000">The inverse of the hyperbolic cosine is called the Argument hyperbolic cosine, and can be computed as <img src="graphics/special_functions_blurb18.jpeg" width="133" height="24" naturalsizeflag="3" align=absmiddle></font><font color="#000000">.</font></p>
-		<p><font color="#000000">The sine Cardinal family of functions is defined by the family of indices <img src="graphics/special_functions_blurb19.jpeg" width="27" height="12" naturalsizeflag="3" align=absmiddle></font><font color="#000000"> by <img src="graphics/special_functions_blurb20.jpeg" width="99" height="58" naturalsizeflag="3" align=absmiddle></font><font color="#000000">.</font></p>
-		<p><font color="#000000">We define, by analogy, the Hyperbolic sine Cardinal family of functions is defined by the family of indices <img src="graphics/special_functions_blurb21.jpeg" width="27" height="12" naturalsizeflag="3" align=absmiddle></font><font color="#000000"> by <img src="graphics/special_functions_blurb22.jpeg" width="111" height="58" naturalsizeflag="3" align=absmiddle></font><font color="#000000">. </font><font color="#000000">It, too, is an entire function.</font></p>
-		<div align="center">
-			<p><img src="graphics/sinc_pi_and_sinhc_pi_on_R.png" width="502" height="330" border="0"></p>
-			<p><samp>Sinus Cardinal of index pi (purple) and Hyperbolic Sinus Cardinal of index pi (red) on R</samp></p>
-		</div>
+		<p>The Special Functions library currently provides five templated special functions, in namespace boost. Two of these (<a href="sinc_sinhc.html"><code>sinc_pi</code> and <code>sinhc_pi</code></a>) are needed by our implementation of quaternions and octonions.</p>
+		<p>The functions <a href="inverse_hyperbolic.html"><code>acosh</code>, <code>asinh</code> and <code>atanh</code></a> are entirely classical, the function <code>sinc_pi</code> sees heavy use in signal processing tasks, and the function <code>sinhc_pi</code> is an <cite>ad'hoc</cite> function whose naming is modelled on <code>sinc_pi</code> and hyperbolic functions.</p>
 		<h2><a name="Acknowledgements"></a>Acknowledgements</h2>
 		<p>The mathematical text has been typeset with <a href="http://www.nisus-soft.com/">Nisus Writer</a>, and the illustrations have been made with <a href="http://www.pacifict.com/">Graphing Calculator</a>. Jens Maurer  was the Review Manager for this library. More acknowledgements in the History section. Thank you to all who contributed to the discution about this library.</p>
 		<h2><a name="Header File"></a>Header Files</h2>
@@ -64,13 +31,8 @@
 			<li type="disc"><a href="../../../boost/math/special_functions/sinhc.hpp">sinhc.hpp</a>
 		</ul>
 		<h2><a name="Test Program"></a>Test Program</h2>
-		<p>The <a href="special_functions_test.cpp">special_functions_test.cpp</a> test program tests the functions for float, double and long double arguments (<a href="output.txt">sample output</a>).</p>
-		<p>It has been compiled and runs without error with the following C++ compilers:</p>
-		<blockquote>
-			<ul>
-				<li>MetroWerk's CodeWarrior Pro 6 on a Mac on a PowerPC G3
-			</ul>
-		</blockquote>
+		<p>The <a href="special_functions_test.cpp">special_functions_test.cpp</a> test program tests the functions for float, double and long double arguments (<a href="output.txt">sample output</a>, with message output enabled).</p>
+		<p>If you define the symbol BOOST_SPECIAL_FUNCTIONS_TEST_VERBOSE, you will get additional output (<a href="output_more.txt">verbose output</a>), which may prove useful for tuning on your platform (the library use &quot;reasonable&quot; tolerances, which may prove to be too strict for your platform); this will only be helpfull if you enable message output at the same time, of course (by uncommenting the relevant line in the test or by adding --log_level=messages to your command line,...).</p>
 		<h2><a name="Synopsis"></a>Synopsis</h2>
 		<pre><code>namespace boost
 {
@@ -133,22 +95,28 @@
 		</blockquote>
 		<h2><a name="History"></a>History</h2>
 		<ul>
+			<li>1.4.2 - 03/02/2003: transitionned to the unit test framework; &lt;boost/config.hpp&gt; now included by the library headers (rather than the test files).
 			<li>1.4.1 - 18/09/2002: improved compatibility with Microsoft compilers.
 			<li>1.4.0 - 14/09/2001: added (after rewrite) <code>acosh</code> and <code>asinh</code>, which were submited by Eric Ford; applied changes for Gcc 2.9.x suggested by John Maddock; improved accuracy; sanity check for test file, related to accuracy.
-
 			<li>1.3.2 - 07/07/2001: introduced <code>namespace math</code>.
-
 			<li>1.3.1 - 07/06/2001:(end of Boost review) split <code>special_functions.hpp</code> into <code>atanh.hpp</code>, <code>sinc.hpp</code> and <code>sinhc.hpp</code>; improved efficiency of <code>atanh</code> with compile-time technique (Daryle Walker); improved accuracy of all functions near zero (Peter Schmitteckert).
-
-			<li>1.3.0 - 26/03/2001: support for complexes &amp; all, for cardinal functions.	
+			<li>1.3.0 - 26/03/2001: support for complexes &amp; all, for cardinal functions.
 			<li>1.2.0 - 31/01/2001: minor modifications for Koenig lookup.
-
 			<li>1.1.0 - 23/01/2001: boostification.
+
 			<li>1.0.0 - 10/08/1999: first public version.
+
+		</ul>
+		<h2><a name="ToDo"></a>To Do</h2>
+		<ul>
+			<li>Add more functions.
+
+			<li>Improve test of each function.
+
 		</ul>
 		<hr>
-		<p>Revised <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %B %Y" startspan -->18 Sep 2002<!--webbot bot="Timestamp" endspan i-checksum="18765" --></p>
-		<p>&copy; Copyright Hubert Holin 2001. Permission to copy, use, modify, sell and distribute this document is granted provided this copyright notice appears in all copies. This software is provided &quot;as is&quot; without express or implied&nbsp; warranty, and with no claim as to its suitability for any purpose.</p>
+		<p>Revised <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %B %Y" startspan -->06 Feb 2003<!--webbot bot="Timestamp" endspan i-checksum="18765" --></p>
+		<p>&copy; Copyright Hubert Holin 2001-2003. Permission to copy, use, modify, sell and distribute this document is granted provided this copyright notice appears in all copies. This software is provided &quot;as is&quot; without express or implied&nbsp; warranty, and with no claim as to its suitability for any purpose.</p>
 	</body>
 
 </html>
