*** empty log message ***
SVN-Revision: 17615

--- a/boost/libs/math/quaternion/index.html
+++ b/boost/libs/math/quaternion/index.html
@@ -44,11 +44,11 @@
   <li><a href="quaternion.html">Documentation</a></li>
 
   <li>Header <a href="../../../boost/math/quaternion.hpp">quaternion.hpp</a></li>
-			<li>Test program <a href="quaternion_test.cpp">quaternion_test.cpp</a></li>
+			<li>Test program <a href="quaternion_test.cpp">quaternion_test.cpp</a> (and <a href="quaternion_mult_incl_test.cpp">another one</a> to test multiple inclusions)</li>
 			<li>Submitted by Hubert Holin.</li>
 		</ul>
 		<hr>
-		<p>Revised <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->18 Sep 2002<!--webbot bot="Timestamp" endspan i-checksum="14992" -->
+		<p>Revised <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%d %b %Y" startspan -->24 Feb 2003<!--webbot bot="Timestamp" endspan i-checksum="14992" -->
 
 </p>
 
