Add a new config macro BOOST_INTEL
SVN-Revision: 18504

--- a/boost/libs/config/config.htm
+++ b/boost/libs/config/config.htm
@@ -1170,6 +1170,12 @@ user code.</p>
         compilers that also define _MSC_VER.</td>
     </tr>
     <tr>
+        <td valign="top">BOOST_INTEL</td>
+        <td valign="top">&lt;boost/config.hpp&gt;</td>
+        <td valign="top">Defined if the compiler is an Intel compiler,
+        takes the same value as the compiler version macro.</td>
+    </tr>
+    <tr>
         <td>BOOST_DINKUMWARE_STDLIB</td>
         <td>&lt;boost/config.hpp&gt;</td>
         <td>Defined if the dinkumware standard library is in use,
