Minor fix, scoped_ptr in the intro should've been shared_ptr.
SVN-Revision: 18745

--- a/boost/libs/smart_ptr/index.htm
+++ b/boost/libs/smart_ptr/index.htm
@@ -18,7 +18,7 @@
 		<h1>Smart Pointer Library</h1>
 		<p>The smart pointer library includes five smart pointer class templates. Smart 
 			pointers ease the management of memory dynamically allocated with C++ <b>new</b>
-			expressions. In addition, <b>scoped_ptr</b> can ease the management of memory 
+			expressions. In addition, <b>shared_ptr</b> can ease the management of memory 
 			dynamically allocated in other ways.</p>
 		<ul>
 			<li>
