Added CRC example
SVN-Revision: 18793

--- a/boost/libs/crc/crc.html
+++ b/boost/libs/crc/crc.html
@@ -571,7 +571,8 @@ library is concerned with CRC implementation, and not with determining
 
 <ul>
 	<li>The CRC header itself: <cite><a href="../../boost/crc.hpp">crc.hpp</a></cite>
-	<li>Some test/example code: <cite><a href="crc_test.cpp">crc_test.cpp</a></cite>
+	<li>Some test code: <cite><a href="crc_test.cpp">crc_test.cpp</a></cite>
+	<li>Some example code: <cite><a href="crc_example.cpp">crc_example.cpp</a></cite>
 </ul>
 
 <h2><a name="credits">Credits</a></h2>
@@ -593,7 +594,8 @@ library is concerned with CRC implementation, and not with determining
 	<dd>Started the library and contributed the theoretical and optimal
 		CRC computation class templates and the CRC computing function
 		template.  Contributed <cite><a
-		href="crc_test.cpp">crc_test.cpp</a></cite>.
+		href="crc_test.cpp">crc_test.cpp</a></cite> and <cite><a
+		href="crc_example.cpp">crc_example.cpp</a></cite>.
 
 	<dt>Ross N. Williams
 	<dd>Wrote <cite><a href="ftp://ftp.rocksoft.com/papers/crc_v3.txt">A
@@ -620,15 +622,18 @@ interface, algorithms, and bug reports:</p>
 <h3><a name="history">History</a></h3>
 
 <dl>
+	<dt>15 Jun 2003, Daryle Walker
+	<dd>Added example program.
+
 	<dt>14 May 2001, Daryle Walker
 	<dd>Initial version.
 </dl>
 
 <hr>
 
-<p>Revised: 14 May 2001</p>
+<p>Revised: 15 June 2003</p>
 
-<p>Copyright &copy; Daryle Walker 2001.  Permission to copy, use,
+<p>Copyright &copy; Daryle Walker 2001, 2003.  Permission to copy, use,
 modify, sell and distribute this document is granted provided this
 copyright notice appears in all copies.  This document is provided
 &quot;as is&quot; without express or implied warranty, and with no claim
